2014-April-08 Chris Morley

	* src/ConditionsManager.cpp, src/ConditionsManager.h: 
	Windows VC10/Mesmer/Mesmer.vcxprojAdd ConditionsManager class to
	reduce size of System class.

	* src/System.cpp, src/System.h, src/unitsConversion.h: Move conditionSet
	struct and CandTpair. Make CandTpair a struct since now accessed only
	from ConditionsManager.

	* src/plugins/SensitivityAnalysis.cpp: only external change.

2014-March-25 Chris Morley

	* src/plugins/MesmerILT.cpp,src/Reaction.cpp,src/Reaction.h,
	schemas/mesmerPlugins.xsd: Allow <me:ExcessReactantConcentration>
	to be read as a child of MesmerILT as well as a child of Reaction to
	be consistent with old and new XML styles.

	* schemas/CMLforMesmer.xsd: ref and id attributes to have the same
	required regex (brackets in molecule names are acceptable).

2014-March-06 Struan Robertson

	* HinderedRotorQM1D.cpp: Minor changes in order to improve convergence.

	* MESMER manual.docx: Condition specification section (7.3.3) updated.

2014-March-19 Chris Morley

	* src/plugins/PriorDistribution.cpp: make co-fragment molecule during parse
	rather than during calculation - earlier error reporting.

	* MesmerQA/AcetylPrior/AcetylPrior.xml: minor format changes.

2014-March-17 Chris Morley

	* src/System.cpp: Allow attributes of <me:PTPair> and its sub-elements
	to be on the parent <me:PTs> to avoid much repetition. Allow multiple
	<me:PTs>s.

	* defaults.xml: Use the standard defaults method for the neglected <PTset>.

	* mesmer1.xsl, schemas/mesmer.xsd: consequent changes to schema and
	Firefox output.

	* src/main.cpp: log message to give the location of the Mesmer directory.
	It is changed in the Windows Installer via an environment variable.
	I could not understand why my changes to defaults.xml were having no effect.

2014-March-06 Struan Robertson

	* HinderedRotorQM1D.cpp: Further updates for angle dependent internal 
	rotation moment of inertia terms.

2014-March-02 Struan Robertson
