@@ -47,6 +47,15 @@ namespace mesmer
     virtual ~HinderedRotorCM1D() {}
     virtual HinderedRotorCM1D* Clone() { return new HinderedRotorCM1D(*this); }
 
+	// Override string property utility function.
+	virtual std::string getStrProperty(std::string label) const {
+	  if (label == "BondID") {
+		return get_BondID() ;
+	  } else {
+	    return string("") ;
+	  }
+	} ;
+
   private:
 
 	double m_reducedMomentInertia;
@@ -91,8 +100,7 @@ namespace mesmer
       cerr << "Unknown bond reference " << bondID << endl;
       return false;
     }
-    string strBondID(bondID) ;
-    set_BondID(strBondID) ;
+    set_BondID(bondID) ;
     cinfo << "Hindered rotor " << get_BondID() ;  
 
     //Remove the vibrational frequency that this hindered rotation replaces
